--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "prettier": "1.16.4"
   },
   "dependencies": {
-    "algoliasearch": "^3.35.1",
-    "instantsearch.js": "^4.0.0"
+    "@algolia/autocomplete-js": "^1.5.1",
+    "@algolia/autocomplete-plugin-query-suggestions": "^1.5.1",
+    "@algolia/autocomplete-theme-classic": "^1.5.1",
+    "algoliasearch": "^4.11.0",
+    "dotenv": "^5.0.1",
+    "instantsearch.js": "^4.0.0",
+    "selectize": "^0.12.6"
   }
 }
